--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -12,29 +12,12 @@
 
     <title>Bangladesh Travel Magazine</title>
 
-    <!--
-      <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
-        -->
-
     <link rel="stylesheet" href="{% static "app1/css/style.css" %}">
     <link rel="stylesheet" href="{% static "app1/fonts/font-awesome/css/font-awesome.min.css" %}">
 
-    <script src="{% static "app1/js/jquery-3.2.0.min.js" %}"></script>
-
-    {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">#}
     <link rel="stylesheet" href="{% static "app1/css/bootstrap.min.css" %}">
-    {#    <link rel="stylesheet" href="{% static "app1/CSS/bootstrap_lumen.css" %}">#}
-    {#    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>#}
-    {#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>#}
-    <script src="{% static "app1/js/bootstrap.min.js" %}"></script>
 
-    <!--[if lt IE 9]>
-
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-
-    <![endif]-->
+    <script src="{% static "app1/js/jquery-3.2.0.min.js" %}"></script>
 
     <style>
         @font-face {
@@ -68,75 +51,73 @@
 <nav class="navbar navbar-inverse navbar-fixed-top gp-navbar" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            {#            <a class="navbar-brand" href="/app1/">BDTM</a>#}
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bdtmNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">BDTM</a>
+            </div>
         </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav gp-navbar-nav">
-                {% if user.is_authenticated %}
+        <div class="navbar-collapse collapse" id="bdtmNavbar">
+            {% if user.is_authenticated %}
 
-
-                    <li><a href="{% url 'index' %}"><i class="glyphicon glyphicon-home"></i></a></li>
+                <ul class="nav navbar-nav gp-navbar-nav">
+                    {#                    <li><a href="{% url 'index' %}"><i class="glyphicon glyphicon-home"></i></a></li>#}
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Divisions
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{% url 'division_detail' "dhaka" %}">Dhaka</a></li>
-                            <li><a href="{% url 'division_detail' "chittagong" %}">Chittagong</a></li>
-                            <li><a href="{% url 'division_detail' "rajshahi" %}">Rajshahi</a></li>
-                            <li><a href="{% url 'division_detail' "sylhet" %}">Sylhet</a></li>
-                            <li><a href="{% url 'division_detail' "khulna" %}">Khulna</a></li>
                             <li><a href="{% url 'division_detail' "barisal" %}">Barisal</a></li>
+                            <li><a href="{% url 'division_detail' "chittagong" %}">Chittagong</a></li>
+                            <li><a href="{% url 'division_detail' "dhaka" %}">Dhaka</a></li>
+                            <li><a href="{% url 'division_detail' "khulna" %}">Khulna</a></li>
+                            <li><a href="{% url 'division_detail' "mymensingh" %}">Mymensingh</a></li>
+                            <li><a href="{% url 'division_detail' "rajshahi" %}">Rajshahi</a></li>
                             <li><a href="{% url 'division_detail' "rangpur" %}">Rangpur</a></li>
+                            <li><a href="{% url 'division_detail' "sylhet" %}">Sylhet</a></li>
                         </ul>
                     </li>
                     {# <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>#}
 
-                    {% if user.is_authenticated %}
-
-                        {% if user.userprofile.image %}
-                          <img src="{{ user.userprofile.image.url }}" class="img-circle" alt="Cinque Terre" width="50"
-                             height="50">
-                        {% else %}
-                            <img src="/media/default-placeholder.png" class="img-circle" alt="Cinque Terre" width="50"
-                             height="50">
-
-                        {% endif %}
-                        <li><a href="{% url 'user_profile' user.username %}">{{ user.username }}</a></li>
-
-                    {% endif %}
-
                     {# <li><a href="/admin/">{{ user.username }}</a></li>#}
                     {# Source: http://stackoverflow.com/questions/806835/django-redirect-to-previous-page-after-login#}
+
                     <li><a href="{% url 'forum' %}">Community</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
+
+                    <li>
+
+                        {% if user.userprofile.image %}
+                            <img src="{{ user.userprofile.image.url }}" class="ts-nav-pro-img" alt="{{ user.username }}">
+                        {% else %}
+                            <img src="/media/default-placeholder.png" class="ts-nav-pro-img" alt="{{ user.username }}">
+                        {% endif %}
+                    
+                        <a style="display: inline;" href="{% url 'user_profile' user.username %}">
+                            {{ user.username }}
+                        </a>
+                    </li>
+                    <li><span class="label ts-label-notify">{{ notification_count }}</span></li>
+
                     <li><a href="{% url 'auth_logout' %}">Logout</a></li>
                     {% if request.user.is_superuser %}
                         <li><a href="/admin"><i class="glyphicon glyphicon-cog"></i></a></li>
                     {% endif %}
-                    <form class="navbar-form navbar-left" method="post" action="{% url 'search' %}">{% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" name="place" class="form-control" placeholder="Search for Any Place">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default" type="submit">
-                                    <i class="glyphicon glyphicon-search"></i>
-                                </button>
-                            </div>
+
+                </ul>
+                <form class="navbar-form navbar-right" method="post" action="{% url 'search' %}">{% csrf_token %}
+                    <div class="input-group">
+                        <input type="text" name="place" class="form-control" placeholder="Search for Any Place">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit">
+                                <i class="glyphicon glyphicon-search"></i>
+                            </button>
                         </div>
-                    </form>
+                    </div>
+                </form>
 
-                {% else %}
-                    <li><a href="{% url 'index' %}">Home</a></li>
-                    <li><a href="{% url 'registration_register' %}?next={{ request.path }}">Register Here</a></li>
-                    <li><a href="{% url 'auth_login' %}?next={{ request.path }}">Login</a></li>
-
-                {% endif %}
-            </ul>
+            {% endif %}
         </div>
     </div>
 </nav>
@@ -144,11 +125,36 @@
     {% block body_block %}
 
     {% endblock %}
+
+
 </div>
 <div class="footer">
-    <p class="gp-copyright">Copyright &copy; Traitorz. All rights reserved.</p>
-    <p>Created with <span class="glyphicon glyphicon-heart"></span> & Django.</p>
+    <div class="ts-footer-menu">
+        <span><a href="{% url 'index' %}">Home</a></span>
+        {% if user.is_authenticated %}
+            <span><a href="{% url 'forum' %}">Community</a></span>
+        {% endif %}
+        <span><a href="{% url 'about' %}">About</a></span>
+    </div>
+    <div class="ts-footer-info">
+        <p class="gp-copyright">Copyright &copy; Team Shunno. All rights reserved.</p>
+        <p>Created with <span class="glyphicon glyphicon-heart"></span> & Django.</p>
+    </div>
 </div>
+
+{# Scriptes #}
+<script src="{% static "app1/js/bootstrap.min.js" %}"></script>
+
+<!--[if lt IE 9]>
+
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
+<![endif]-->
+
+{% block javasript_block %}
+
+{% endblock %}
 
 </body>
 </html>
