--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -7,6 +7,22 @@
     </div>
 
     <div class="container-fluid gp-container-normal">
+
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+        {% endif %}
+
         <form class="gp-form" role="form" method="post" action=".">
             {% csrf_token %}
 
@@ -37,10 +53,10 @@
             <button type="submit" class="btn btn-primary btn-block">Join</button>
         </form>
 
+        <div class="jumbotron gp-jumbotron gp-jumbotron-transparent ts-top-bottom-margin-30">
+            <p>Already registered! <a href="{% url 'login' %}">Login Here!</a></p>
+        </div>
+
     </div>
-    {#    <form method="post" action="">#}
-    {#        {% csrf_token %}#}
-    {#        {{ form.as_p }}#}
-    {#        <input type="submit" value="Submit"/>#}
-    {#    </form>#}
+
 {% endblock %}
