--- a/templates/app1/index_default.html
+++ b/templates/app1/index_default.html
@@ -160,7 +160,11 @@
         </div>
     </div>
 
-{% block javasript_block %}
+
+{% endblock %}
+
+
+{% block javascript_block %}
 
     <script>
         $(function () {
@@ -171,9 +175,6 @@
             });
         });
     </script>
-
-
-{% endblock %}
 
 {% endblock %}
 
