--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -318,25 +318,21 @@
 
                                     </div>
                                     {# ========Default Form ============= #}
-                                    <form id="answer_form" data-id={{ obj.id }} method="POST"
-                                          action="{% url 'save_answer' obj.id %}" role="form"
-                                          class="gp-side-panel-form">
-                                        {% csrf_token %}
-                                        {% for hidden in a_form.hidden_fields %}
-                                            {{ hidden }}
-                                        {% endfor %}
-                                        <div class="input-group">
-                                            <input name="text" placeholder="Have you the answer?" class="form-control"
-                                                   equired>
-                                            <div class="input-group-btn">
-                                                <button id="bt{{ forloop.counter }}" class="btn btn-default"
-                                                        type="submit">
-                                                    <i class="glyphicon glyphicon-send"></i>
-                                                </button>
-                                            </div>
-                                        </div>
+                            <form id="add_answer{{ forloop.counter }}" data-id={{ obj.id }} method="POST"
+                                  class="gp-form-story-comment">
+                                {% csrf_token %}
 
-                                    </form>
+                                <div class="input-group">
+                                    <input class="form-control" type="text" id="text{{ forloop.counter }}"
+                                           maxlength="1000" name="text" required>
+                                    <div class="input-group-btn">
+                                        <button class="btn btn-default" onclick="answerDiv({{ forloop.counter }})"
+                                                type="submit">
+                                            <i class="glyphicon glyphicon-send"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
 
 
                                     {# ========Form End ============= #}
@@ -445,6 +441,30 @@
                     success: function () {
                         // alert("Created a New Comment");
                         $("#" + formId).load(" #" + formId);
+                    }
+                });
+            });
+        }
+        function answerDiv(formId) {
+
+            $("#add_answer" + formId).on('submit', function (event) {
+
+                event.preventDefault();
+                var element = $(this);
+                element.off('submit');
+                var _id = element.attr("data-id");
+                $.ajax({
+                    url: {% url 'save_answer' %},
+                    type: 'POST',
+                    data: {
+                        text: $('#text' + formId).val(),
+                        ques_id: _id,
+                        csrfmiddlewaretoken: '{{ csrf_token }}'
+                    },
+                    success: function () {
+                        // alert("Created a New Comment");
+                        $("#" + "ques_ans").load(" #" + "ques_ans");
+                        //alert("deleted")
                     }
                 });
             });
